--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News Chatbot</title>
+    <title>Voosh Chatbot</title>
   </head>
-  <body>
+  <body class="bg-[#0f0f0f]">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
