--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Voosh Chatbot</title>
+    <title>Newsly</title>
   </head>
   <body class="bg-[#0f0f0f]">
     <div id="root"></div>
