chore: update metadata

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Newsly is a RAG-powered chatbot that answers questions over a news corpus.">
+    <meta name="keywords" content="news, chatbot, RAG, AI, news chatbot, news chatbot AI, news chatbot RAG, news chatbot AI RAG">
+    <link rel="icon" href="/favicon.ico" />
     <title>Newsly</title>
   </head>
   <body class="bg-[#0f0f0f]">
